--- a/notifications/templates/mail/event_overview.html.jinja
+++ b/notifications/templates/mail/event_overview.html.jinja
@@ -1,119 +1,91 @@
 <!DOCTYPE html>
-<table align="center"
+<table role="presentation"
        width="100%"
-       style="border-collapse: collapse;
-              mso-table-lspace: 0pt;
-              mso-table-rspace: 0pt;
-              min-width: 220px;
-              max-width: 536px;
-              font-size: 14px">
+       align="center"
+       style="margin:0 auto;
+              border-collapse:collapse;
+              mso-table-lspace:0pt;
+              mso-table-rspace:0pt;
+              max-width:600px;
+              font-size:14px">
     <tr>
-        <td style="height: 20px;
-                   line-height: 20px;
-                   font-size: 0;
-                   mso-line-height-rule: exactly">&nbsp;</td>
+        <td height="20" style="line-height:20px;font-size:0;">&nbsp;</td>
     </tr>
-    <th style="font-size: 18px;
-               font-weight: 600;
-               text-align: left;
-               padding: 0 0 5px 0;
-               margin: 0;
-               line-height: 1.4;
-               mso-line-height-rule: exactly"
-        colspan="2">
-        <img src="cid:overview.png"
-             style="width: 18px;
-                    height: 19px;
-                    display: inline;
-                    vertical-align: middle"
-             alt="Event overview" />
-        Event overview
-    </th>
     <tr>
-        <td width="120"
-            style="padding: 5px 0;
-                   margin: 0;
-                   line-height: 1.4;
-                   mso-line-height-rule: exactly;
-                   font-weight: 600">Event date:</td>
-        <td style="padding: 5px 0;
-                   margin: 0;
-                   line-height: 1.4;
-                   mso-line-height-rule: exactly">
+        <td colspan="2"
+            style="font-size:18px;
+                   font-weight:600;
+                   text-align:left;
+                   padding-bottom:5px;
+                   line-height:1.4">
+            <img class="section-icon"
+                 src="cid:overview.png"
+                 alt="Event overview"
+                 width="18"
+                 height="19"
+                 style="display:inline-block;
+                        vertical-align:middle;
+                        border:0;
+                        margin-right:4px">
+            Event overview
+        </td>
+    </tr>
+    <tr>
+        <td width="120" style="padding:5px 0;font-weight:600;line-height:1.4;">Event date:</td>
+        <td style="padding:5px 0;line-height:1.4;">
             {% if service_notification %}
-                {{ data.LASTSERVICESTATECHANGE | timestamp() if data.get('LASTSERVICESTATECHANGE') else 'N/A' }}
+                {{ data.get("LASTSERVICESTATECHANGE") | timestamp() if data.get('LASTSERVICESTATECHANGE') else 'N/A' }}
             {% else %}
-                {{ data.LASTHOSTSTATECHANGE | timestamp() if data.get('LASTHOSTSTATECHANGE') else 'N/A' }}
+                {{ data.get("LASTHOSTSTATECHANGE") | timestamp() if data.get('LASTHOSTSTATECHANGE') else 'N/A' }}
             {% endif %}
         </td>
     </tr>
     <tr>
-        <td width="100"
-            style="padding: 5px 0;
-                   margin: 0;
-                   line-height: 1.4;
-                   mso-line-height-rule: exactly;
-                   font-weight: 600">Address:</td>
-        <td style="padding: 5px 0;
-                   margin: 0;
-                   line-height: 1.4;
-                   mso-line-height-rule: exactly">{{ data.HOSTADDRESS }}</td>
+        <td width="120" style="padding:5px 0;font-weight:600;line-height:1.4;">Address:</td>
+        <td style="padding:5px 0;line-height:1.4;">{{ data.get('HOSTADDRESS', 'N/A') }}</td>
     </tr>
     <tr>
-        <td width="100"
-            style="padding: 5px 0;
-                   margin: 0;
-                   line-height: 1.4;
-                   mso-line-height-rule: exactly;
-                   font-weight: 600">Site:</td>
-        <td style="padding: 5px 0;
-                   margin: 0;
-                   line-height: 1.4;
-                   mso-line-height-rule: exactly">{{ data.OMD_SITE }}</td>
+        <td width="120" style="padding:5px 0;font-weight:600;line-height:1.4;">Site:</td>
+        <td style="padding:5px 0;line-height:1.4;">{{ data.get('OMD_SITE', 'N/A') }}</td>
     </tr>
     <tr>
-        <td width="100"
-            style="padding: 5px 0;
-                   margin: 0;
-                   line-height: 1.4;
-                   mso-line-height-rule: exactly;
-                   font-weight: 600">Summary:</td>
-        <td style="padding: 5px 0;
-                   margin: 0;
-                   line-height: 1.4;
-                   mso-line-height-rule: exactly">
+        <td width="120" style="padding:5px 0;font-weight:600;line-height:1.4;">Summary:</td>
+        <td style="padding:5px 0;line-height:1.4;">
             {% if service_notification %}
-                {{ macros.replace_statemarker(data.SERVICEOUTPUT_HTML) }}
+                {{ macros.replace_statemarker(data.get('SERVICEOUTPUT_HTML', '') ) }}
             {% else %}
-                {{ macros.replace_statemarker(data.HOSTOUTPUT_HTML) }}
+                {{ macros.replace_statemarker(data.get('HOSTOUTPUT_HTML', '') ) }}
             {% endif %}
         </td>
     </tr>
     {% if service_notification %}
         <tr>
-            <td width="100"
-                style="padding: 5px 0;
-                       margin: 0;
-                       line-height: 1.4;
-                       mso-line-height-rule: exactly;
-                       font-weight: 600">Service details:</td>
+            <td width="120" style="padding:5px 0;font-weight:600;line-height:1.4;">Service details:</td>
+            <td>&nbsp;</td>
         </tr>
     </table>
-    <table align="center"
+    <table role="presentation"
            width="100%"
-           style="background-color: #f6f6f6;
-                  min-width: 220px;
-                  max-width: 536px">
+           align="center"
+           style="max-width:600px;
+                  border-collapse:collapse;
+                  font-size:14px;
+                  margin:0 auto">
         <tr>
-            <td>
-                <p style="padding: 10px 0 10px 10px">
-                    {% if data.LONGSERVICEOUTPUT_HTML %}
-                        {{ macros.replace_statemarker(data.LONGSERVICEOUTPUT_HTML) }}
-                    {% else %}
-                        No details available
-                    {% endif %}
-                </p>
+            <td style="background-color:#f6f6f6;
+                       padding:10px;
+                       word-wrap:break-word;
+                       overflow-wrap:break-word;
+                       word-break:break-word;
+                       line-height:1.4">
+                {% if data.get('LONGSERVICEOUTPUT_HTML') %}
+                    {{ macros.replace_statemarker(data.get('LONGSERVICEOUTPUT_HTML') ) }}
+                {% else %}
+                    No details available
+                {% endif %}
             </td>
         </tr>
-    {% endif %}
+    </table>
+{% else %}
 </table>
+{% endif %}
