--- a/notifications/templates/mail/host_labels.html.jinja
+++ b/notifications/templates/mail/host_labels.html.jinja
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<table align="center"
-       width="100%"
+<table width="100%"
        style="border-spacing: 0;
-              min-width: 220px;
-              max-width: 536px">
+              max-width: 600px;
+              margin: 0 auto">
     <tr>
         <td style="height: 20px;
                    line-height: 20px;
@@ -15,7 +14,20 @@
             style="font-size: 18px;
                    font-weight: 600;
                    text-align: left">
-            <img src="cid:label.png" style=" width: 18px; height: 19px " />
+            <img class="section-icon"
+                 src="cid:label.png"
+                 alt="Label icon"
+                 width="18"
+                 height="19"
+                 style="display:inline-block;
+                        vertical-align:middle;
+                        width:18px;
+                        height:19px;
+                        border:0;
+                        background-color:#ffffff;
+                        color-scheme:light dark;
+                        supported-color-schemes:light dark;
+                        mso-line-height-rule:exactly" />
             Host labels
         </th>
     </tr>
