--- a/notifications/templates/mail/matching_rule.html.jinja
+++ b/notifications/templates/mail/matching_rule.html.jinja
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<table align="center"
-       width="100%"
+<table width="100%"
        style="border-top: 1px solid #e5e5e5;
               border-collapse: separate;
-              min-width: 220px;
-              max-width: 536px">
+              margin: 0 auto;
+              max-width: 600px">
     <tr>
         <td>
             <p style="text-align: center; font-size: 12px;">
