--- a/notifications/templates/mail/summary.html.jinja
+++ b/notifications/templates/mail/summary.html.jinja
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
-<table align="center"
-       width="100%"
-       style="border: 1px solid #e5e5e5;
+<table width="100%"
+       style="margin: 0 auto;
+              max-width: 600px;
+              border: 1px solid #e5e5e5;
               border-collapse: separate;
-              min-width: 220px;
-              max-width: 536px;
-              border-top: 8px solid {% if service_notification %} {{ state_mapping[data.SERVICESTATE].split("background-color: ")[1] .split(';
-              ')[0] }} {% else %} {{ state_mapping[data.HOSTSTATE].split("background-color: ")[1] .split(';
+              border-top: 8px solid {% if service_notification %} {{ state_mapping.get(data.SERVICESTATE, 'background-color: #888888;
+               color: #ffffff;
+               ').split('background-color: ')[1].split(';
+              ')[0] }} {% else %} {{ state_mapping.get(data.HOSTSTATE, 'background-color: #888888;
+               color: #ffffff;
+               ').split('background-color: ')[1].split(';
               ')[0] }} {% endif %}">
     <tr>
-        <td align="center" style="padding: 10px 0 5px 0;">
-            <table width="100%"
-                   height="124"
-                   style="border-collapse: collapse;
-                          border-spacing: 0;
-                          max-width: 512px;
-                          min-width: 220px">
+        <td style="margin:0; padding: 10px 0 5px 0;">
+            <table width="100%" style="border-collapse: collapse;border-spacing: 0;">
                 <tr>
                     <td width="80"
                         height="33"
@@ -31,11 +29,8 @@
                                color: #2c3844">
                         <table style="border-collapse: collapse;">
                             <tr>
-                                <td style=" line-height: 45px; padding: 0; ">
-                                    <div style="{{ macros.event_marker_style() }};
-                                                {% if service_notification %} {{ state_mapping[(data.PREVIOUSSERVICEHARDSTATE|default("UNKNOWN") )] }} {% else %} {{ state_mapping[(data.PREVIOUSHOSTHARDSTATE|default("UNKNOWN") )] }} {% endif %};
-                                                display: inline-block;
-                                                /* Inline block to respect width */">
+                                <td style="line-height: 45px; padding: 0;">
+                                    <div style="{{ macros.event_marker_style() }} {% if service_notification %} {{ state_mapping[(data.PREVIOUSSERVICEHARDSTATE|default("UNKNOWN") )] }} {% else %} {{ state_mapping[(data.PREVIOUSHOSTHARDSTATE|default("UNKNOWN") )] }} {% endif %} display: inline-block">
                                         {% if service_notification %}
                                             {{ (data.PREVIOUSSERVICEHARDSTATE|default("UNKNOWN") )[:4] }}
                                         {% else %}
@@ -48,22 +43,13 @@
                                            text-align: center;
                                            line-height: 1;
                                            height: 33px">
-                                    <!--[if mso]>
-                                    <div style="margin-top: 5px;">
-                                    <![endif]-->
                                     <div style="font-size: 14px;
                                                 font-weight: 600;
                                                 line-height: 1.5;
                                                 display: inline-block">&#8211;&#8250;</div>
-                                    <!--[if mso]>
-                                    </div>
-                                    <![endif]-->
                                 </td>
-                                <td style=" line-height: 45px; padding: 0; ">
-                                    <div style="{{ macros.event_marker_style() }};
-                                                {% if service_notification %} {{ state_mapping[data.SERVICESTATE] }} {% else %} {{ state_mapping[data.HOSTSTATE] }} {% endif %};
-                                                display: inline-block;
-                                                /* Inline block to respect width */">
+                                <td style="line-height: 45px; padding: 0;">
+                                    <div style="{{ macros.event_marker_style() }} {% if service_notification %} {{ state_mapping[data.SERVICESTATE] }} {% else %} {{ state_mapping[data.HOSTSTATE] }} {% endif %} display: inline-block">
                                         {% if service_notification %}
                                             {{ data.SERVICESTATE[:4] }}
                                         {% else %}
@@ -102,7 +88,7 @@
         </td>
     </tr>
     <tr>
-        <td align="center">
+        <td style="margin:0 auto;">
             {% if href %}{{ macros.view_issue_button(href) }}{% endif %}
         </td>
     </tr>
