--- a/notifications/templates/mail/summary_commands.html.jinja
+++ b/notifications/templates/mail/summary_commands.html.jinja
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<table align="center"
-       width="100%"
+<table width="100%"
        style="border: 1px solid #e5e5e5;
               border-collapse: separate;
               border-top: 8px solid #77BCE4;
-              min-width: 220px;
-              max-width: 536px">
+              margin: 0 auto;
+              max-width: 600px">
     <tr>
         <td align="center" style="padding: 10px 0 5px 0;">
             <table width="100%"
                    height="124"
                    style="border-collapse: collapse;
                           border-spacing: 0;
-                          max-width: 472px">
+                          margin: 0 auto;
+                          max-width: 600px">
                 <tr>
                     <td width="80"
                         height="33"
