--- a/packages/cmk-frontend/src/themes/facelift/scss/_page_menu.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_page_menu.scss
@@ -449,7 +449,7 @@ div#top_heading {
       input#inpage_search_form_reset {
         width: 8px;
         height: 8px;
-        background-image: url('images/icon_close.svg');
+        background-image: url('../facelift/images/icon_close.svg');
         background-size: 8px 8px;
         border-radius: 0;
       }
@@ -458,7 +458,7 @@ div#top_heading {
         width: 18px;
         height: 18px;
         background-color: $success-dimmed;
-        background-image: url('images/icon_search_action_button.svg');
+        background-image: url('../facelift/images/icon_search_action_button.svg');
         background-size: 14px 14px;
         background-position: center;
         filter: none;
