--- a/packages/cmk-frontend/src/themes/facelift/scss/_snapins.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_snapins.scss
@@ -482,7 +482,7 @@ div.spacertop {
     width: 100%;
     height: $input-field-height;
     color: $font-color;
-    background-image: url('images/icon_quicksearch.png');
+    background-image: url('../facelift/images/icon_quicksearch.png');
     background-position: right $spacing bottom 4px;
     background-size: 15px;
   }
