--- a/packages/cmk-frontend/src/themes/facelift/scss/_views.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_views.scss
@@ -758,7 +758,7 @@ table.timeline td.ooservice,
 div.avlegend.timeline div.state.ooservice {
   color: $font-color-black;
   background-color: $middarkgrey;
-  background-image: url('images/ooservice.png');
+  background-image: url('../facelift/images/ooservice.png');
   background-repeat: repeat;
 }
 
