--- a/packages/cmk-frontend/src/themes/facelift/scss/_wato.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_wato.scss
@@ -241,7 +241,7 @@ div.warning_container {
   &::before {
     display: inline-block;
     padding: 5px;
-    content: url('images/icon_problem.svg');
+    content: url('../facelift/images/icon_problem.svg');
   }
 }
 
@@ -414,7 +414,7 @@ body.main .popup_menu table.data tr.data > td.bulksearch div.togglebutton.checkb
   float: left;
   width: 180px;
   height: 140px;
-  background-image: url('images/folder_closed.png');
+  background-image: url('../facelift/images/folder_closed.png');
   background-position: top left;
   background-repeat: no-repeat;
 
@@ -468,7 +468,7 @@ body.main .popup_menu table.data tr.data > td.bulksearch div.togglebutton.checkb
   }
 
   &.open {
-    background-image: url('images/folder_open.png');
+    background-image: url('../facelift/images/folder_open.png');
 
     .infos {
       height: 50px;
@@ -832,7 +832,7 @@ div.filter_buttons {
   &::before {
     content: '';
     display: inline-block;
-    background-image: url('images/icon_manual_active.svg');
+    background-image: url('../facelift/images/icon_manual_active.svg');
     background-repeat: no-repeat;
     background-size: 16px;
     width: 16px;
@@ -1273,31 +1273,31 @@ table.nform.rulesettings td.legend {
     }
 
     &.repl_locked {
-      background-image: url('images/icon_repl_locked.png');
+      background-image: url('../facelift/images/icon_repl_locked.png');
     }
 
     &.repl_pending {
-      background-image: url('images/icon_repl_pending.png');
+      background-image: url('../facelift/images/icon_repl_pending.png');
     }
 
     &.repl_failed {
-      background-image: url('images/icon_repl_failed.png');
+      background-image: url('../facelift/images/icon_repl_failed.png');
     }
 
     &.repl_25 {
-      background-image: url('images/icon_repl_25.png');
+      background-image: url('../facelift/images/icon_repl_25.png');
     }
 
     &.repl_50 {
-      background-image: url('images/icon_repl_50.png');
+      background-image: url('../facelift/images/icon_repl_50.png');
     }
 
     &.repl_75 {
-      background-image: url('images/icon_repl_75.png');
+      background-image: url('../facelift/images/icon_repl_75.png');
     }
 
     &.repl_success {
-      background-image: url('images/icon_success.png');
+      background-image: url('../facelift/images/icon_success.png');
     }
   }
 }
