--- a/packages/cmk-frontend/src/themes/facelift/scss/_node_visualization.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_node_visualization.scss
@@ -80,10 +80,10 @@ div.topology_layout_designer,
 a#menu_shortcut_edit_layout,
 div.topology_compare_history {
   img {
-    content: url('images/icon_toggle_off.svg') !important;
+    content: url('../facelift/images/icon_toggle_off.svg') !important;
 
     &.on {
-      content: url('images/icon_toggle_on.svg') !important;
+      content: url('../facelift/images/icon_toggle_on.svg') !important;
     }
   }
 }
@@ -114,10 +114,10 @@ div.nodevis.toggle_switch_container {
   background-repeat: no-repeat;
   pointer-events: all;
 
-  background-image: url('images/icon_toggle_off.svg');
+  background-image: url('../facelift/images/icon_toggle_off.svg');
 
   &.on {
-    background-image: url('images/icon_toggle_on.svg');
+    background-image: url('../facelift/images/icon_toggle_on.svg');
   }
 
   img.iconbutton {
@@ -185,7 +185,7 @@ div.node_vis {
   }
 
   img.tick {
-    content: url('images/icon_tick.svg') !important;
+    content: url('../facelift/images/icon_tick.svg') !important;
   }
 
   g#svg_layers .node_element circle.mesh_root {
@@ -232,7 +232,7 @@ div.node_vis {
   g#nodes img.unknown {
     height: 50px;
     width: 50px;
-    content: url('images/icon_maxisnapin.svg');
+    content: url('../facelift/images/icon_maxisnapin.svg');
   }
 
   // Radio group
