inventory UI API: Fix padding if background color
Change-Id: I54d0d9e9f2bacc4965143ada3ccbee475fc1fff9

--- a/packages/cmk-frontend/src/themes/facelift/scss/_views.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_views.scss
@@ -603,6 +603,10 @@ table.data.single {
     &.perfometer div.glass {
       width: 100%;
     }
+
+    &.inv_cell_no_padding {
+      padding: 0;
+    }
   }
 }
 
@@ -669,6 +673,10 @@ table.data.matrix {
       width: 100%;
       padding: 0;
     }
+  }
+
+  td.inv_cell_no_padding {
+    padding: 0;
   }
 }
 
@@ -952,6 +960,10 @@ td.invtree {
       padding: 2px 6px;
       background-color: $nested-table-td-bg-color;
 
+      &.inv_cell_no_padding {
+        padding: 0;
+      }
+
       &.inactive_cell {
         background-color: $nested-table-td-inactive-bg-color;
 
@@ -1231,4 +1243,10 @@ td.agent_config table.rulesets td {
 
 span.muted_text {
   color: $font-color-dimmed;
+}
+
+table.data {
+  td.inv_cell_no_padding {
+    padding: 0 !important;
+  }
 }
