Global remove box shadow for flashed, confirmation, information, success, warning and waiting boxes
CMK-24617

Change-Id: I6eee0c06a2233629b1545d787a69fa1133af597f

--- a/packages/cmk-frontend/src/themes/facelift/scss/_page_menu.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_page_menu.scss
@@ -566,6 +566,7 @@ div#page_menu_popups {
       padding: 16px;
       background-color: $headline-color;
       margin-bottom: $spacing;
+      box-shadow: none;
 
       button.confirm_question,
       button.confirm_success,
