--- a/packages/cmk-frontend/src/themes/facelift/scss/_variables.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_variables.scss
@@ -39,6 +39,10 @@ $font-color-light-bg: $grey-4;
 $font-color-light-grey: $grey-1;
 $font-color-green: $success-dimmed-2;
 $font-color-orange: $orange-2;
+// breadcrumb font colors
+$font-color-breadcrumb-inactive: $color-conference-grey-70;
+$font-color-breadcrumb-interactive: $color-conference-grey-100;
+$font-color-breadcrumb-hover: $color-corporate-green-70;
 
 // -----------------------------------------------------------------------------
 // Form elements (input, textarea, button, etc.)
