--- a/packages/cmk-frontend/src/themes/modern-dark/scss/_variables.scss
+++ b/packages/cmk-frontend/src/themes/modern-dark/scss/_variables.scss
@@ -40,6 +40,10 @@ $font-color-light-bg: $grey-6;
 $font-color-light-grey: $midgrey;
 $font-color-green: $success;
 $font-color-orange: $orange-1;
+// breadcrumb font colors
+$font-color-breadcrumb-inactive: $color-white-70;
+$font-color-breadcrumb-interactive: $color-white-100;
+$font-color-breadcrumb-hover: $color-corporate-green-50;
 
 // -----------------------------------------------------------------------------
 // Form elements (input, textarea, button, etc.)
