use frontend icon rendering for main menu icons
* icons are 15px instead of 14px

CMK-25084

Change-Id: Ia4c3b77c5782a9694e1eb38540671b70aa8ebed9

--- a/packages/cmk-frontend/src/themes/facelift/scss/_main_menu.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_main_menu.scss
@@ -12,6 +12,12 @@
   padding: 0;
   margin: 0;
 
+  cmk-dynamic-icon {
+    vertical-align: middle;
+    margin-left: -28px;
+    margin-right: 7px;
+  }
+
   img {
     &.icon {
       width: 20px;
